v0.6.9 (not yet released)
-------------------------

Bug Fixes

    - Fix bugs for 2.7 syntax

v0.6.8
-------------------------

Bug Fixes

    - hdfs py3 fixes
    - protect stomp import
    - fix color keyword in mwhiskers

v0.6.7
-------------------

New Features
    - randsphere, randcap take optional rng
    - converted unit over to pytest style. Also moved out various tests from
      individual modules and sub packages
    - move to setuptools


Bug Fixes
    - coords sphdist and gcirc return zero distance of ra, dec match
      exactly
    - made htm distance always zero when ra, dec exactly match

v0.6.6
--------------------------

Bug Fixes
    - Fixed wrong WCS jacobian elements when ra wraps around zero

v0.6.5
--------------------------

New Features
    - Added ability to pickle cosmology objects (Jacob Ider Chitham)
    - in wcs, change inverse computation to lazy-computation speeding up
      initialization.

Compatability
    - reran the SWIG bindings for htm to avoid warnings on newer python
      versions

Bug Fixes
    - check for None header keywords when loading WCS objects

v0.6.4
-------------------------

New Features
    - added pbar.PBar for simple progress bars
    - make htm picklable (B. Van Klaveren)

Compatability
    - Adapt to new pyyaml requirements to specify a loader, in io.read_yaml
      (M. Becker)
    - Updating setup.py for better macOS support (D. Munha)

v0.6.3.x
-------------------------

New Features

    - ostools.StagedInFile
        A class to stage a file in to local disk for reading.
    - ostools.StagedOutFile
        A context manager for staging files from temporary directories to
        a final destination.
    - added dorot option for dealing with random cap generation at the pole
    - added coords.rotate to do euler rotations
    - smart copying of Cosmo objects
    - added pbar.PBar for simple progress bars

python 3 updates

    - sqlite_util updated to py3
    - sfile updated to py3